welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: Unmatched closing brace '}' ignored here
  if (estFaceMur == true) {droite();} else testSol();};
                                                     ^